<resources>
    <string name="app_name">MediationApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">ПРИВЕТ</string>
    <string name="enjoy_the_qualifiers">Наслаждайся отборочными.\nБудь внимателен.\nДелай хорошо.</string>
    <string name="add_in_acc">Войти в аккаунт</string>
    <string name="no_acc_registration">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Забыли пароль ?</string>
    <string name="profile">Профиль</string>
    <string name="greeting_user">С возвращением, %1$s! </string>
    <string name="how_do_you_fell">Каким ты себя чувствуешь сегодня ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="block_title">Заголовок блока</string>
    <string name="you_need_sign_in">You need sign in the app</string>
    <string name="user_not_found">User not found</string>
    <string name="error_short_password">"Enter more than 5 characters"</string>
    <string name="enter_correct_email">Enter correct email</string>
    <string name="enter_correct_age">Enter correct age</string>
</resources>