<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:foregroundGravity="center|bottom|clip_vertical"
    android:background="@drawable/spalsh_screen"
    >

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="148dp"
        android:layout_height="0dp"
        android:layout_marginTop="490dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_medium"
        android:gravity="center"
        android:text="@string/enjoy_the_qualifiers"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />



    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alegreya_medium"
        android:gravity="center"
        android:text="@string/no_acc_registration"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="320dp"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/round_style"
        android:fontFamily="@font/alegreya_medium"
        android:text="@string/add_in_acc"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:backgroundTint="@color/light_theame_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hi" />

</androidx.constraintlayout.widget.ConstraintLayout>